--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
       
       - name: Semantic Release
         env:
-          GITHUB_TOKEN: ${{ sectrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ sectrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
