--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ name: Semantic Release
 
 on:
   push:
-    branches: [main]
+    branches:
+      - 'main'
   pull_request:
-    branches: [main]
+    branches:
+      - 'main'
   
 jobs:
   build:
