feat: Github Actions config v8

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "type": "github"
   },
   "release": {
-    "branches": [
-      "master"
-    ]
+    "branches": ["main"]
   },
   "peerDependencies": {
     "react": ">=16",
