--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "branches": ["main"]
   },
   "peerDependencies": {
-    "react": ">=16",
-    "typescript": ">=4.0.0"
+    "react": ">=16"
   },
   "files": [
     "dist",
