--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "license": "MIT",
   "typings": "dist/index.d.ts",
-  "main": "",
+  "main": "dist/index.js",
   "homepage": "https://github.com/MaVarela",
   "repository": {
     "url": "https://github.com/MaVarela/sb-components.git",
